--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-# Swoopo Clone
-## An App Academy Capstone Project
+= Swoopo Clone
+== An App Academy Capstone Project
 
-For documentation, please visit the link:wiki.
+For documentation, please visit the wiki[https://github.com/edsfocci/academy-swoopo_clone/wiki].
