Changed README to be more presentable

--- a/README.example.rdoc
+++ b/README.example.rdoc
@@ -259,3 +259,5 @@ The default directory structure of a generated Ruby on Rails application:
   External libraries that the application depends on. Also includes the plugins
   subdirectory. If the app has frozen rails, those gems also go here, under
   vendor/rails/. This directory is in the load path.
+
+For documentation, please visit the wiki[https://github.com/edsfocci/academy-swoopo_clone/wiki].
